# opti-floow

./: .env  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.lovable/: plan.md
public/: personnel_import.xlsx
src/: App.tsx  REFACTORING_NOTES.md  index.css  main.tsx
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CloudSessionProvider.tsx  ContactDialog.tsx  DataSyncProvider.tsx  ErrorBoundary.tsx
src/config/: pricingPlans.ts  rolePermissions.ts
src/context/: AppContext.tsx  CloudDataContext.tsx  LicenseContext.tsx  PlanningImportContext.tsx  SidebarContext.tsx
src/data/: demoData.ts  demoSavedTours.ts  demoVehiclesData.ts  trailerDefaults.ts  transportCompanies.ts  vehicleDefaults.ts
src/design-system/: README.md  css-template.css  tokens.ts
src/hooks/: useAddressAutocomplete.ts  useAdminToken.ts  useCalculations.ts  useChargePresets.ts  useClients.ts  useCloudCharges.ts  useCloudData.ts  useCloudDataSafe.ts  useCloudDrivers.ts  useCloudFavoriteAddresses.ts  useCloudSession.ts  useCloudTrailers.ts  useCloudVehicles.ts  useCompanyConfig.ts  useCompanyData.ts  useCompanySettings.ts  useCostPrediction.ts  useDataPrefetch.ts  useDataSync.ts  useDemoMode.ts  useDriverAbsences.ts  useExploitationMetrics.ts  useFavoriteAddresses.ts  useFuelPrice.ts  useItineraryState.ts  useLicense.ts  useMarginAlerts.ts  useNotifications.ts  usePWAUpdates.ts  usePlanLimits.ts  usePlanning.ts  useQuotes.ts  useRealtimeSync.ts  (+18 more)
supabase/: config.toml
(+310 files in other folders)
